# CBT-pro

./: .env.local.example  .gitignore  CHANGELOG.md  README.md  SPEC.md  bunfig.toml  docker-compose.yml
.github/: changelog-config.json
.github/workflows/: ci.yml  release.yml
database/migrations/: 001_init.sql  002_refactor_schema.sql
docs/: AGENT.md  API_SPEC.md  ARCHITECTURE.md  SECURITY.md  STRATEGY_GUIDE.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/charting/: CandlestickChart.tsx  ChartWrapper.tsx  IndicatorOverlays.tsx  TradeMarkers.tsx
frontend/src/components/: IndicatorConfigSidebar.tsx  Layout.tsx  OrderHistoryPanel.tsx  PlaybackControls.tsx  PositionPanel.tsx  SignalDashboard.tsx
frontend/src/components/Backtest/: BacktestConfig.tsx  BacktestResult.tsx
frontend/src/components/Chart/: KLineChart.tsx
frontend/src/components/Dashboard/: AccountDashboard.tsx
frontend/src/components/Layout/: Header.tsx  MainLayout.tsx
frontend/src/components/Playback/: PlaybackPanel.tsx
frontend/src/components/Signals/: SignalsPanel.tsx
frontend/src/mocks/: mockBars.ts  mockEngine.ts  mockSignals.ts  mockSnapshot.ts
frontend/src/pages/: BacktestConfig.tsx  Dashboard.tsx  Results.tsx
frontend/src/stores/: useAppStore.ts  websocket.ts
frontend/src/styles/: globals.css
frontend/src/tests/: BacktestConfig.test.tsx  KLineChart.test.tsx  chart.test.tsx  playback.test.tsx  setup-jsdom.ts  setup.ts  websocket.test.tsx
frontend/src/types/: index.ts
frontend/src/utils/: fetch.ts
frontend/tests/e2e/: bollinger-custom-params.spec.ts
proto/: cbt_pro.proto
python_strategies/: pyproject.toml
python_strategies/cbt_pro/: __init__.py
python_strategies/cbt_pro/backtest_client/: __init__.py  client.py
python_strategies/cbt_pro/indicators/: __init__.py  wrapper.py
python_strategies/cbt_pro/interfaces/: strategy.py
python_strategies/cbt_pro/strategies/: __init__.py  bollinger_mean_reversion.py  ema_cross.py  rsi_momentum.py
python_strategies/cbt_pro/utils/: __init__.py
python_strategies/tests/: test_client.py  test_data_leakage.py  test_indicators.py  test_interfaces.py  test_strategies.py
rust_core/: .dockerignore  Cargo.toml  Dockerfile
rust_core/crates/api/: Cargo.toml
rust_core/crates/api/src/: lib.rs  server.rs  websocket.rs
rust_core/crates/data_pipeline/: Cargo.toml
rust_core/crates/data_pipeline/src/: aggregation.rs  backtest.rs  bar.rs  cache.rs  error.rs  exchange.rs  fetcher.rs  lib.rs  storage.rs  symbol.rs
rust_core/crates/engine/: Cargo.toml
rust_core/crates/engine/src/: backtest.rs  config.rs  lib.rs  strategy.rs
rust_core/crates/indicators/: Cargo.toml
rust_core/crates/indicators/src/: atr.rs  bollinger.rs  ema.rs  lib.rs  macd.rs  rsi.rs  vwap.rs
rust_core/crates/orderbook/: Cargo.toml
rust_core/crates/orderbook/src/: lib.rs  margin.rs  order.rs  position.rs
rust_core/crates/strategy/: Cargo.toml
rust_core/crates/strategy/src/: always_long.rs  base.rs  bollinger_bands.rs  breakout.rs  config.rs  ema_crossover.rs  error.rs  lib.rs  rsi_macd.rs
rust_core/crates/strategy/tests/: strategy_tests.rs  test_strategy_config_interface.rs  test_strategy_uses_indicators.rs
rust_core/src/: lib.rs  main.rs
rust_core/tests/: integration_test.rs  test_kline_repetition.rs
scripts/: dev.sh  import-binance-data.js  init-db.sh
