[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cbt-pro"
version = "0.1.0"
description = "CBT-Pro Python Strategy Layer"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "aiohttp>=3.9",
    "pandas>=2.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.7",
    "pytest>=7.4",
    "ruff>=0.1",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
