[package]
name = "cbt-pro"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/engine", "crates/orderbook", "crates/indicators", "crates/data_pipeline", "crates/api"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.33", features = ["serde", "db-postgres"] }
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "=0.4.38", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal", "rust_decimal"] }
parquet = "52"
arrow = "52"
axum = "0.7"
futures = "0.3"
async-trait = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
api = { path = "crates/api" }
tokio.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "cbt-pro-api"
path = "src/main.rs"