[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
orderbook = { path = "../orderbook" }
data_pipeline = { path = "../data_pipeline" }
rust_decimal = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true, features = ["ws"] }
chrono = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
