[package]
name = "data_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
