[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
orderbook = { path = "../orderbook" }
data_pipeline = { path = "../data_pipeline" }
indicators = { path = "../indicators" }
rust_decimal = { workspace = true }
rust_decimal_macros = "1.33"
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
